traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:32: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalZigZag:33: error: not found: value cpt
    cpt+=1
    ^TraversalZigZag:37: error: not found: value cpt
      ecritMessage(cpt)
                   ^TraversalZigZag:38: error: not found: value cpt
      cpt+=1
      ^TraversalZigZag:49: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalZigZag:50: error: not found: value cpt
    cpt+=1
    ^TraversalZigZag:56: error: not found: value cpt
      ecritMessage(cpt)
                   ^TraversalZigZag:57: error: not found: value cpt
      cpt+=1
      ^TraversalZigZag:66: error: not found: value cpt
      ecritMessage(cpt)
                   ^TraversalZigZag:67: error: not found: value cpt
      cpt+=1
      ^